# capture-mcp-server

./: Cargo.toml  README.md
src/: main.rs
