[package]
name = "capture-mcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
image = { version = "0.25", default-features = false, features = ["png"] }
rmcp = { version = "1.3.0", features = ["transport-io"] }
schemars = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = [
	"macros",
	"rt-multi-thread",
	"io-std",
] }
uuid = { version = "1.8", features = ["v4"] }
windows = { version = "0.58", features = [
	"Win32_Foundation",
	"Win32_Graphics_Gdi",
	"Win32_System_ProcessStatus",
	"Win32_System_Threading",
	"Win32_UI_WindowsAndMessaging",
] }
